Dream big section completed successfully

--- a/style.css
+++ b/style.css
@@ -5,18 +5,23 @@ body{
 h1{
     font-size: 50px;
 }
+h2{
+    font-size: 40px;
+}
 .orange-color{
     color: orange;
 }
 section{
     display: flex;
     padding-left: 2px;
+    margin-bottom: 100px;
 }
 .half-width{
     width: 50%;
+    margin: 50px;
 }
 .half-width img{
-    width: 80%;
+    width: 100%;
 }
 .link-button{
     text-decoration: none;
@@ -28,4 +33,9 @@ section{
 .top-banner{
     background-image: url(images/top-banner.png);
     background-repeat: no-repeat;
+}
+.dream-big{
+    background-image: url(images/dream-bg.png);
+    background-repeat: no-repeat;
+    background-position: right;
 }
