--- a/style.css
+++ b/style.css
@@ -11,7 +11,7 @@ h2{
 .orange-color{
     color: orange;
 }
-section{
+.flexible-container{
     display: flex;
     padding-left: 2px;
     margin-bottom: 100px;
@@ -38,4 +38,30 @@ section{
     background-image: url(images/dream-bg.png);
     background-repeat: no-repeat;
     background-position: right;
+}
+.experience-item{
+    width: 40%;
+    margin-left: 5%;
+    margin-right: 5%;
+    padding-left: 20px;
+    box-shadow: 10px 10px 40px gray;
+    border-radius: 5px;
+    border-left: 7px solid blue;
+}
+.flexible-container{
+    background-image: url(images/exp-bg.png);
+    background-repeat: no-repeat;
+    background-position: left;
+}
+#full-stack-web-developer{
+    border-left: 7px solid tomato;
+}
+#junior-web-developer{
+    border-left: 7px solid blue;
+}
+footer{
+    text-align: center;
+}
+a{
+    text-decoration: none;
 }
