successfully completed the project

--- a/style.css
+++ b/style.css
@@ -48,7 +48,8 @@ h2{
     border-radius: 5px;
     border-left: 7px solid blue;
 }
-.flexible-container{
+
+.experiences-area{
     background-image: url(images/exp-bg.png);
     background-repeat: no-repeat;
     background-position: left;
